--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ pyarrow>=15.0.0
 psycopg2-binary>=2.9.9
 python-dotenv>=1.0.0
 numpy>=1.26.0
-gigachat>=0.1.13
+openai>=1.0.0
 dj-database-url>=2.1.0
