--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-django>=5.0,<6.0
-pandas>=2.2.0
-pyarrow>=15.0.0
-psycopg2-binary>=2.9.9
-python-dotenv>=1.0.0
-numpy>=1.26.0
+Django>=4.2.0
+pandas>=2.0.0
+pyarrow>=12.0.0
 requests>=2.31.0
 dj-database-url>=2.1.0
+PyYAML>=6.0
+scikit-learn>=1.3.0
