docs: upd .env.example

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,5 @@ INGEST_HITS_2=2024_yandex_metrika_hits.parquet
 # Yandex AI (для генерации гипотез)
 folder_id=your-folder-id
 api_key=your-api-key
+
+INGEST_SAMPLE_LIMIT=42634
